--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
 
 html {
     color: var(--title-color);
+    scroll-behavior: smooth;
 }
 
 h1 {
@@ -164,4 +165,8 @@ header {
     place-content: center;
     text-align: center;
     position: relative;
+}
+
+.current {
+    color: red;
 }
