--- a/style.css
+++ b/style.css
@@ -46,16 +46,50 @@ nav ul {
 }
 
 nav ul {
-    list-style: none;
     margin: 0;
     padding: 0;
 }
 
 nav ul li a {
+    font-size: 1rem;
+    position: relative;
     display: block;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 2rem;
     color: white;
     text-decoration: none;
+}
+
+nav a:hover span {
+    transform: scale(1);
+}
+
+nav a:hover .nav-label {
+    opacity: 1;
+}
+
+nav a.selected-nav .nav-dot {
+    background-color: yellow;
+}
+
+nav span {
+    transform: scale(0.6);
+}
+
+nav .nav-label {
+    display: inline-block;
+    margin-left: 1rem;
+    opacity: 0;
+    transition: transform 0.2s, opacity 0.5s;
+}
+
+nav .nav-dot {
+    display: inline-block;
+    position: relative;
+    height: 0.8rem;
+    width: 0.8rem;
+    border-radius: 50%;
+    background-color: white;
+    transition: transform 0.5s, background-color 0.5s;
 }
 
 /* HOME SECTION */
@@ -165,8 +199,4 @@ header {
     place-content: center;
     text-align: center;
     position: relative;
-}
-
-.current {
-    color: red;
 }
