--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@
     --background-color-toggle: hsl(var(--color-hue), 5%, 80%);
     --title-color: hsl(var(--color-hue), 90%, 10%);
     --text-color: hsl(var(--color-hue), 90%, 10%);
+    --description-text-color: hsl(var(--color-hue), 90%, 20%);
+    --description-background-color: hsl(var(--color-hue), 10%, 96%);
     --code-background-color: hsla(var(--color-hue), 30%, 100%, 0.6);
     --warning-background-color: var(--code-background-color);
     --code-color: hsl(var(--color-hue), 60%, 40%);
@@ -49,10 +51,12 @@
     --background-color-odd: hsl(var(--color-hue), 20%, 16%);
     --background-color-toggle: hsl(var(--color-hue), 5%, 80%);
     --title-color: hsl(var(--color-hue), 40%, 92%);
-    --text-color: hsl(var(--color-hue), 30%, 92%);
+    --text-color: hsl(var(--color-hue), 30%, 80%);
+    --description-text-color: hsl(var(--color-hue), 90%, 10%);
+    --description-background-color: hsl(var(--color-hue), 10%, 90%);
     --code-background-color: hsla(var(--color-hue), 40%, 12%);
     --warning-background-color: var(--code-background-color);
-    --code-color: hsl(var(--color-hue), 30%, 75%);
+    --code-color: hsl(var(--color-hue), 30%, 86%);
     --nav-dot-color: var(--main-color);
     --nav-dot-selected: white;
 }
@@ -352,8 +356,8 @@ header {
 
 .section-description {
     margin-bottom: 1rem;
-    color: var(--title-color, black);
-    background-color: white;
+    color: var(--description-text-color, black);
+    background-color: var(--description-background-color, white);
     padding: 1rem;
     border-radius: 0.25rem;
     border-left: 6px solid var(--main-color, black);
