--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@
     --constrast-color: hsl(var(--color-hue), 60%, 40%);
     --accent-color: hsl(var(--color-hue), 100%, 45%);
     --decorative-color: hsl(var(--color-hue), 100%, 50%);
-    --background-color: hsl(var(--color-hue), 90%, 70%);
-    --background-color-odd: hsl(var(--color-hue), 85%, 85%);
+    --background-color: hsl(var(--color-hue), 40%, 70%);
+    --background-color-odd: hsl(var(--color-hue), 40%, 85%);
     --background-color-toggle: hsl(var(--color-hue), 5%, 80%);
     --title-color: hsl(var(--color-hue), 90%, 10%);
     --text-color: hsl(var(--color-hue), 90%, 10%);
@@ -471,6 +471,38 @@ header {
     height: 2vmax;
     border-radius: 2px;
     background-color: var(--illustration-green, hsl(150, 80%, 65%));
+}
+
+.example-ch-one {
+    padding: 1rem;
+    margin: auto;
+    max-width: 50ch;
+    border-radius: 4px;
+    color: hsl(270, 30%, 90%);
+    background-color: var(--illustration-purple);
+}
+
+.example-ch-buttons {
+    display: flex;
+    flex-direction: column;
+}
+
+.example-ch-buttons .example-ch-button-one {
+    padding: 1rem;
+    margin-bottom: 0.5rem;
+    min-width: 20ch;
+    border-radius: 4px;
+    color: hsl(150, 70%, 20%);
+    background-color: var(--illustration-green, lightgreen);
+}
+
+.example-ch-buttons .example-ch-button-two {
+    padding: 1rem;
+    margin-top: 0;
+    min-width: 20ch;
+    border-radius: 4px;
+    color: hsl(150, 70%, 20%);
+    background-color: var(--illustration-green, lightgreen);
 }
 
 
