--- a/style.css
+++ b/style.css
@@ -102,6 +102,22 @@ code {
     border-radius: 3px;
 }
 
+ul {
+    line-height: 2;
+}
+
+ul a {
+    text-decoration-line: underline;
+    text-decoration-color: var(--main-color, black);
+    text-underline-offset: 5px;
+    text-decoration-thickness: 1px;
+}
+
+li::marker {
+    font-size: 1.2em;
+    color: var(--main-color, black);
+}
+
 /* NAV */
 
 nav ul {
@@ -291,7 +307,7 @@ header {
 /* SECTIONS */
 
 .section {
-    padding: 3rem 0;
+    padding: 4rem 0;
 }
 
 .section-odd {
@@ -379,6 +395,10 @@ header {
     transform: translateY(-1px);
     box-shadow: 0 7px 14px rgba(50, 50, 50, .1),
         0 3px 6px rgba(0, 0, 0, .08);
+}
+
+.section-resources {
+    margin-top: 3.25rem;
 }
 
 /* SECTION RELATIVE UNITS */
