--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ nav ul {
     position: fixed;
     top: 0;
     bottom: 0;
-    z-index: 1;
+    z-index: 50;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -135,11 +135,11 @@ nav ul {
     padding: 0;
 }
 
-nav ul li a {
+nav a {
     font-size: 1rem;
     position: relative;
     display: block;
-    padding: 0.5rem 2rem;
+    padding: 0.5rem 0 0.5rem 2rem;
     color: white;
     text-decoration: none;
 }
