--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
     --constrast-color: hsl(var(--color-hue), 60%, 40%);
     --accent-color: hsl(var(--color-hue), 100%, 45%);
     --decorative-color: hsl(var(--color-hue), 100%, 50%);
-    --background-color: hsl(var(--color-hue), 40%, 70%);
+    --background-color: hsl(var(--color-hue), 35%, 82%);
     --background-color-odd: hsl(var(--color-hue), 40%, 85%);
     --background-color-toggle: hsl(var(--color-hue), 5%, 80%);
     --title-color: hsl(var(--color-hue), 90%, 10%);
@@ -52,7 +52,7 @@
     --background-color-odd: hsl(var(--color-hue), 20%, 16%);
     --background-color-toggle: hsl(var(--color-hue), 5%, 80%);
     --title-color: hsl(var(--color-hue), 40%, 92%);
-    --text-color: hsl(var(--color-hue), 30%, 80%);
+    --text-color: hsl(var(--color-hue), 20%, 80%);
     --description-text-color: hsl(var(--color-hue), 90%, 10%);
     --description-background-color: hsl(var(--color-hue), 10%, 90%);
     --code-background-color: hsla(var(--color-hue), 40%, 12%);
@@ -75,8 +75,11 @@ h1 {
 }
 
 a {
-    text-decoration: none;
     color: var(--title-color);
+    text-decoration-line: underline;
+    text-decoration-color: var(--main-color, black);
+    text-underline-offset: 5px;
+    text-decoration-thickness: 1px;
 }
 
 p {
@@ -106,13 +109,6 @@ ul {
     line-height: 2;
 }
 
-ul a {
-    text-decoration-line: underline;
-    text-decoration-color: var(--main-color, black);
-    text-underline-offset: 5px;
-    text-decoration-thickness: 1px;
-}
-
 li::marker {
     font-size: 1.2em;
     color: var(--main-color, black);
@@ -124,15 +120,13 @@ nav ul {
     position: fixed;
     top: 0;
     bottom: 0;
-    z-index: 50;
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
-
-nav ul {
+    z-index: 50;
     margin: 0;
     padding: 0;
+    line-height: 1.5;
 }
 
 nav a {
@@ -307,6 +301,9 @@ header {
 /* SECTIONS */
 
 .section {
+    display: grid;
+    place-content: center;
+    min-height: 100vh;
     padding: 4rem 0;
 }
 
@@ -402,13 +399,6 @@ header {
 }
 
 /* SECTION RELATIVE UNITS */
-
-#section-relative-units {
-    min-height: 100vh;
-    display: grid;
-    place-content: center;
-    position: relative;
-}
 
 .example-em-parent {
     display: flex;
